# STM32F103-Baremetal

./: CMakeLists.txt  linker_script.ld  startup_stm32f103.cpp  startup_stm32f103xb.s
src/: CMakeLists.txt  clock.cpp  clock.h  def.h  gpio.cpp  gpio.h  main.cpp  mcu.cpp  mcu.h  uart.cpp  uart.h
src/apps/: CMakeLists.txt  button.cpp  button.h  i2c_defs.h  pin.cpp  pin.h  serial.cpp  serial.h  spi_defs.h  uart_defs.h
src/drivers/: CMakeLists.txt  clock.cpp  clock.h  gpio.cpp  i2c.cpp  i2c.h  i2c_defs.h  pin.h  serial.cpp  spi.cpp  spi.h  spi_defs.h  timer.cpp  timer.h  timer_defs.h  uart.cpp  uart.h  uart_defs.h
src/examples/: button_test.cpp  i2c_master.cpp  i2c_slave.cpp  spi_master.cpp  spi_slave.cpp  uart_receiver.cpp  uart_transmitter.cpp
src/libcore/: CMakeLists.txt  core.cpp  core.h  handlers.c  interface.h  types.h
src/registers/: clock.cpp  gpio.cpp  gpio.h  i2c.cpp  tim.cpp  tim.h  uart.cpp  uart.h
src/stm32f103/: CMakeLists.txt  mcu.cpp  mcu.h
